# puzzles

./: Cargo.toml  README.md
pdbs_benchmark/: Cargo.toml  README.md
pdbs_benchmark/src/: main.rs
puzzles/: Cargo.toml  README.md
puzzles/src/: hash_min_db.rs  lib.rs  pattern_db.rs  solver.rs  stats.rs
puzzles/src/map/: dict2bits.rs
puzzles/src/map/dict2bits2/: conf.rs  level_size_chooser.rs  mod.rs
puzzles/src/puzzle_sliding16/: heuristic.rs  mod.rs  neighbors.rs  pattern.rs  state.rs  utils.rs
