[package]
name = "pdbs_benchmark"
version = "0.1.0"
authors = ["Piotr Beling <piotr.beling@wmii.uni.lodz.pl>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "The program for benchmarking pattern database implementations."
documentation = "https://docs.rs/pdbs_benchmark"
repository = "https://github.com/beling/puzzles"
readme = "README.md"
include = [ "**/*.rs", "Cargo.toml", "README.md" ]
categories = ["algorithms", "game-development", "mathematics", "science"]
keywords = [ "puzzle", "benchmark", "sliding-puzzle", "15-puzzle", "pattern-db" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ph = "0.8"
puzzles = { version="0.1", path = "../puzzles" }
rand = "0.8"
rand_chacha = "0.3"
csf = "0.1"
fsum = "0.1"
cpu-time = "1"